--- a/dmenu.cfg
+++ b/dmenu.cfg
@@ -15,7 +15,7 @@
 #                     must be of the same configuration type
 # ( value, ... )    - parentheses denote a list, and a list can contain multiple groups,
 #                     arrays, scalar values or other lists
-# /* */, = false;  # and #   - treated as comments
+# /* */, // and #   - treated as comments
 # @included "path"  - include another configuration file - useful if you want to split
 #                     the configuration into smaller parts
 #
